# mq-experiment

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  mq-experiment.cabal  stack.yaml
src/: Main.hs  stomp.hs
