name:                mq-experiment
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/neongreen/mq-experiment#readme
license:             BSD3
license-file:        LICENSE
author:              Artyom Kazak
maintainer:          support@wire.com
copyright:           Wire Swiss GmbH
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable mqtt-bin
  hs-source-dirs:      src
  main-is:             mqtt.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , c-mosquitto
                     , options
  ghc-options:         -threaded -with-rtsopts=-N

executable stomp-bin
  hs-source-dirs:      src
  main-is:             stomp.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , mime
                     , options
                     , stomp-queue
                     , text
  ghc-options:         -threaded -with-rtsopts=-N
